<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_first"
            android:textColor="#000000"
            android:textSize="15dp"
            android:layout_margin="20dp"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/text_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/proximity"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/text_discord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/discord"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/text_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/website"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:lines="1"
            android:maxLines="10"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:text="@string/star_mandatory"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:text="Create"
            android:textColor="#000000"/>
    </LinearLayout>

</LinearLayout>